--- a/2022/Cargo.toml
+++ b/2022/Cargo.toml
@@ -7,6 +7,8 @@ authors = ["Tadeo Kondrak <me@tadeo.ca>"]
 
 [dependencies]
 sscanf = "0.4.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1"
 
 [[bin]]
 name = "01"
@@ -55,3 +57,7 @@ path = "11.rs"
 [[bin]]
 name = "12"
 path = "12.rs"
+
+[[bin]]
+name = "13"
+path = "13.rs"
