2021: Split big file into separate crates for each day

--- a/2021/Cargo.toml
+++ b/2021/Cargo.toml
@@ -1,8 +1,6 @@
-[package]
-name = "advent-of-code-2021"
-version = "0.1.0"
-edition = "2021"
+[workspace]
+resolver = "2"
+members = ["crates/*"]
 
-[dependencies]
-aoc_driver = "0.1.4"
-permutohedron = "0.2.4"
+[profile.bench]
+lto = true
