--- a/2022/crates/day09/Cargo.toml
+++ b/2022/crates/day09/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-util.workspace = true
+util.path = "../util"
+util.package = "util2022"
