2024 Day 6: Try to optimize

--- a/2024/Cargo.toml
+++ b/2024/Cargo.toml
@@ -3,7 +3,8 @@ resolver = "2"
 members = ["crates/*"]
 
 [workspace.dependencies]
-util.path = "crates/util"
+util.path = "../crates/util"
+window.path = "../crates/window"
 
 [profile.bench]
 lto = true
